packages/ducktools-classbuilder/ducktools_classbuilder-0.9.1.tar.gz/ducktools_classbuilder-0.9.1/tests/prefab/shared/examples/fails/creation_2.py
from ducktools.classbuilder.prefab import prefab, attribute


@prefab
class FailSyntax:
    x = attribute(default=0)
    y = attribute()
